# Elements-of-statistical-learning-exercices

./: ESL.cabal
exercices/: Exercise2-8.hs
